[gd_scene load_steps=17 format=3 uid="uid://oky6pcuowaht"]

[ext_resource type="Script" path="res://Scripts/Root.gd" id="1_o7jbw"]
[ext_resource type="Script" path="res://Scripts/Managers/AstarManager.gd" id="2_mcq4u"]
[ext_resource type="Script" path="res://Scripts/Managers/IDManager.gd" id="3_x1efe"]
[ext_resource type="Script" path="res://Scripts/Managers/FactionManager.gd" id="4_2bto8"]
[ext_resource type="Script" path="res://Scripts/Managers/MovementManager.gd" id="5_v1nmr"]
[ext_resource type="Script" path="res://Scripts/Managers/CombatDisplayManager.gd" id="6_ufnu5"]
[ext_resource type="Script" path="res://Scripts/Managers/CombatManager.gd" id="7_ueisb"]
[ext_resource type="Texture2D" uid="uid://bpknn2sftchu" path="res://Assets/kenney_monochrome-rpg/Default/Tilemap/tilemap.png" id="8_rg0gi"]
[ext_resource type="Texture2D" uid="uid://cra1ghruc2rot" path="res://Assets/kenney_monochrome-rpg/Dot Matrix/Tilemap/tilemap.png" id="9_7uh1a"]
[ext_resource type="PackedScene" uid="uid://bubtvx71pybw8" path="res://Objects/Player.tscn" id="10_t3yxf"]
[ext_resource type="PackedScene" uid="uid://bu7b8uscyh8p" path="res://Objects/Cursor.tscn" id="11_jt6lu"]
[ext_resource type="PackedScene" uid="uid://bqjdsgvgysu7b" path="res://Objects/Enemy.tscn" id="12_rc8es"]
[ext_resource type="Texture2D" uid="uid://cfwt7ay2xwwxf" path="res://Assets/Alma_Still_Neutral.png" id="13_m81hb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7bnwr"]
texture = ExtResource("8_rg0gi")
separation = Vector2i(1, 1)
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
0:1/0 = 0
0:1/0/custom_data_0 = true
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
0:2/0/custom_data_0 = true
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
0:3/0 = 0
0:3/0/custom_data_0 = true
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1du5r"]
texture = ExtResource("9_7uh1a")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0

[sub_resource type="TileSet" id="TileSet_bf6dg"]
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_7bnwr")
sources/1 = SubResource("TileSetAtlasSource_1du5r")

[node name="Root" type="Node2D"]
script = ExtResource("1_o7jbw")

[node name="Manager\'s Hideout" type="Node2D" parent="."]

[node name="AstarManager" type="Node2D" parent="Manager\'s Hideout"]
script = ExtResource("2_mcq4u")

[node name="IdManager" type="Node2D" parent="Manager\'s Hideout"]
script = ExtResource("3_x1efe")

[node name="FactionManager" type="Node2D" parent="Manager\'s Hideout"]
script = ExtResource("4_2bto8")

[node name="MovementManager" type="Node2D" parent="Manager\'s Hideout"]
script = ExtResource("5_v1nmr")

[node name="CombatDisplayManager" type="Node2D" parent="Manager\'s Hideout"]
script = ExtResource("6_ufnu5")

[node name="CombatManager" type="Node2D" parent="Manager\'s Hideout"]
script = ExtResource("7_ueisb")

[node name="Map" type="TileMap" parent="."]
tile_set = SubResource("TileSet_bf6dg")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 3, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 1048576, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 3, 8, 0, 3, 65544, 0, 0, 131080, 1048576, 0, 196616, 0, 2, 262152, 0, 0, 327688, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 3, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 1, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 1, 327699, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 1048576, 0, 655363, 0, 0, 393220, 1048576, 0, 458756, 0, 1, 524292, 0, 0, 589828, 0, 3, 655364, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 393232, 0, 0, 458768, 0, 2, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 2, 655377, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 3)

[node name="Cursor" parent="." instance=ExtResource("11_jt6lu")]
position = Vector2(-17, 19)

[node name="AlmaStillNeutral" type="Sprite2D" parent="."]
visible = false
position = Vector2(282, 126)
scale = Vector2(-0.0353322, 0.0353322)
texture = ExtResource("13_m81hb")

[node name="Units" type="Node2D" parent="."]

[node name="Enemy2" parent="Units" instance=ExtResource("12_rc8es")]
position = Vector2(56, 104)
set_IP_from_pos = true
sprite_id = 2

[node name="Enemy" parent="Units" instance=ExtResource("12_rc8es")]
position = Vector2(104, 72)
set_IP_from_pos = true
sprite_id = 2

[node name="Player2" parent="Units" instance=ExtResource("10_t3yxf")]
position = Vector2(8, 8)
set_IP_from_pos = true

[node name="Player" parent="Units" instance=ExtResource("10_t3yxf")]
position = Vector2(40, 40)
set_IP_from_pos = true
